# Seven.Travel-test-task

./: .env.example  .gitignore  Dockerfile  README.md  Seven.Travel Test task.postman_collection.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: fastapi.yml
src/: __init__.py  main.py
src/config/: __init__.py  app_config.py  log_config.py
src/db/: database.py  models.py  repositories.py
src/routes/: __init__.py  tasks_route.py
src/schemas/: __init__.py  schemas.py
tests/: __init__.py  conftest.py
tests/test_db/: __init__.py  test_repositories.py
tests/test_routes/: __init__.py  test_tasks_route.py
